Updates headed toward using ibpathref
Pre-deletion commit

DELETING

Tidy/format

Prior to DELETION of DefaultPathAndChecksum

Temp commit prior to exploring Type Mappers

Iterim

executor updates for prfs

Fix 1

Workingish update

Moves and removes

Mostly working

After move of pathref

Tests run